Fri Jan  2 07:41:39 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/naomi/CUTS/analysis/cuts.analysis.py:

          . Updated SOAP message formatting.

Fri Jan  2 07:38:47 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/naomi/CUTS/analysis/cuts.analysis.py:

          . Updated the connector to use SSL (or https://) connection with
            communicating with the BMW.

Thu Jan  1 01:40:11 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW/Security/MembershipProvider.cs:

          . Bug fix where the connection was not open during the validation
            step. This was resolved by open/closing the connection in the
            ValidateUser () method, instead of during the Initialize ()
            method.

Wed Dec 31 21:01:24 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/Testing_App.cpp:

          . Apparently, I forgot to implement the --ignore-errors option.

Wed Dec 31 19:12:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/Test_Options.h:
        * cuts/utils/testing/Testing_App.cpp:

          . Added a new command-line parameters --ignore-error, which is used
            to ignore startup/shutdown errors, and keep working.

Wed Dec 31 17:46:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/workers/Test_Logger/Test_Logger_i.cpp:

          . Added more debug output to the client.

Wed Dec 31 08:23:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/client/Barrier_Client.cpp:
        * cuts/utils/barrier/server/Barrier_i.cpp:

          . Bug fix where the barrier failed to duplicate the callback's
            reference. This resulted in invalid reference in the server, and
            prevented it from signaling the nodes.

Wed Dec 31 08:12:12 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
